sg.tf
#ssh http https for security group ProjectA
resource "aws_security_group" "projectA-sg" {
    name = "ProjectA-sg"
    description = "ProjectA-sg"
    vpc_id = "${aws_vpc.projectA-vpc.id}"
    ingress {
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    ingress {
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        from_port = 443
        to_port = 443
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
    tags = {
        Name = "ProjectA-sg"
    }
}

#rds security group for ProjectA
resource "aws_security_group" "projectA-rds-sg" {
    name = "ProjectA-rds-sg"
    description = "ProjectA-rds-sg"
    vpc_id = "${aws_vpc.projectA-vpc.id}"
    ingress {
        from_port = 3306
        to_port = 3306
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
    tags = {
        Name = "ProjectA-rds-sg"
    }
}
